# detect-installer

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pr.yml  release.yml  tests.yml
Formula/: detect-installer-test.rb
tests/: conftest.py  test_edge_cases.py  test_filesystem.py  test_metadata.py  test_priority.py  test_upgrade_cmd.py
tests/e2e/: test_brew.py  test_conda.py  test_pip.py  test_pipx.py  test_uv.py  utils.py
